# CITYZEN

./: .dockerignore  .gitignore  Dockerfile  README.md  build-sif.sh  docker-compose.yml  ndsm_height_calibration.py  pipeline.py  pipeline.sh  requirements.txt  submit_job.sh
3dom-lod2-generator/tool/: blender_common.py  blender_main.py  dsm_to_height_grid.py  merge.py  merge_base.py
3dom-lod2-generator/tool/cpp/: CMakeLists.txt  skeleton.cpp
3dom-lod2-generator/tool/io_utils/: debug.py  exporter.py  importer.py
3dom-lod2-generator/tool/modeling/: blender_ops.py  min_bounding_rect.py  pointcloud_ops.py
3dom-lod2-generator/tool/modeling/roofs/: flat.py  gabled.py  gabled_L.py  hip.py  pyramid.py
3dom-lod2-generator/tool/shapefile/: converter.py  reader.py
DSMNet/: .gitignore  autoencoder.py  nets.py  requirement.txt  test_dsm.py  utils.py
building_rooftype_classification/: .gitignore  orthophoto_inference.py
building_rooftype_classification/utils/: footprints.py  footprints_base.py  loader.py  saver.py
